test/neg/neg-rpc1.errc
Arrays may not be passed as arguments to rpc
